[package]
name = "ssh-rs"
version = "0.3.3"
edition = "2021"
authors = [
    "Gao Xiang Kang <1148118271@qq.com>",
    "Jovi Hsu <jv.hsu@outlook.com>"
]
description = "In addition to encryption library, pure RUST implementation of SSH-2.0 client protocol"
keywords = ["ssh", "sshAgreement", "sshClient"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/1148118271/ssh-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dangerous-algorithms = ["dangerous-rsa-sha1", "dangerous-dh-group1-sha1"]
dangerous-rsa-sha1 = ["sha1"]
dangerous-dh-group1-sha1 = []

[dependencies]
log = "0.4"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
strum = "0.25"
strum_macros = "0.25"
# the crate rsa has removed the internal hash implement from 0.7.0
sha1  = { version = "0.10.5", default-features = false, features = ["oid"], optional = true }
sha2  = { version = "0.10.6", default-features = false, features = ["oid"]}
rsa = "0.9"
aes = "0.8"
ctr = "0.9"
ssh-key = { version = "0.6", features = ["rsa", "ed25519", "alloc"]}
signature = "2.1"
ring = "0.16"
filetime = "0.2"

# async
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# tokio = { version = "^1", features = [
#     "sync",
#     "macros",
#     "io-util",
#     "rt",
#     "time"
#     ]}

[dev-dependencies]
paste = "1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
