[package]
name = "customized_algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-rs = { path="../../", features = ["deprecated-algorithms"]}
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "^0.3" }
